# node-gtk-ts-test

./: .gitignore  meson.build  meson_options.txt  package-lock.json  package.json  tsconfig.json
build-aux/flatpak/: cz.pervoj.NodeGtkTsTest.yml  generated-sources.json  update-generated-sources.sh
po/: POTFILES  cs.po  node-gtk-ts-test.pot
src/: constants.js  entrypoint.js.in  gresource.xml  main.ts  meson.build  resources.ts  templates.ts  win.blp  win.ts
